Refactor: DB 테이블명 변경, 불필요한 파일 삭제
- TestContainer 문제 원인 파악후 해결함과 동시에 임시방편이였던 테이블명 소문자를 원래대로였던 대문자로 변경
- 불필요해진 파일 삭제

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
     generate-ddl: false
     show-sql: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
     properties:
       hibernate.hibernate.format_sql: true
       hibernate.timezone.default_storage: NORMALIZE_UTC
