Conf: TestContainer 설정 및 테스트 분리
- redis testcontainer 설정 추가
- testcontainer 적용 방식 변경
- 통합테스트와 단위테스트, 전체테스트 실행 구분(build.gradle.kts에 설정)

--- a/infra/redis/redis.extends.yml
+++ b/infra/redis/redis.extends.yml
@@ -42,6 +42,8 @@ services:
       --appendonly no
       --protected-mode no
       --replicaof redis-master 6379
+      --replica-announce-ip redis-slave1
+      --replica-announce-port 6379
     volumes:
       - ../../data/redis/slave1:/data
     healthcheck:
@@ -69,6 +71,8 @@ services:
       --appendonly no
       --protected-mode no
       --replicaof redis-master 6379
+      --replica-announce-ip redis-slave2
+      --replica-announce-port 6379
     volumes:
       - ../../data/redis/slave2:/data
     healthcheck:
