--- a/infra/redis/sentinel-base.conf
+++ b/infra/redis/sentinel-base.conf
@@ -7,6 +7,10 @@ dir /data
 
 sentinel resolve-hostnames yes
 sentinel announce-hostnames yes
+
+sentinel announce-ip ${SENTINEL_ANNOUNCE_IP}
+sentinel announce-port ${SENTINEL_ANNOUNCE_PORT}
+
 sentinel monitor server-master redis-master 6379 2
 sentinel down-after-milliseconds server-master 5000
 sentinel failover-timeout server-master 60000
