--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,21 @@ spring:
       hibernate.hibernate.format_sql: true
       hibernate.timezone.default_storage: NORMALIZE_UTC
       hibernate.jdbc.time_zone: UTC
-
+  cache:
+    type: redis
+  data:
+    redis:
+      sentinel:
+        master: server-master
+        nodes:
+          - localhost:26379
+          - localhost:26380
+          - localhost:26381
+      connect-timeout: 3s
+logging:
+  level:
+    org.redisson: info
+    org.redisson.client.protocol: info
 ---
 spring.config.activate.on-profile: local, test
 
