--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,16 @@ spring:
       hibernate.jdbc.time_zone: UTC
   cache:
     type: redis
+    redis:
+      master: server-master
+      sentinels:
+        - host: 127.0.0.1
+          port: 26379
+        - host: 127.0.0.1
+          port: 26380
+        - host: 127.0.0.1
+          port: 26381
+      database: 11
   data:
     redis:
       sentinel:
@@ -36,6 +46,9 @@ logging:
   level:
     org.redisson: info
     org.redisson.client.protocol: info
+    org.springframework.cache: DEBUG
+    org.springframework.data.redis: DEBUG
+
 ---
 spring.config.activate.on-profile: local, test
 
