--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -20,7 +20,7 @@ spring:
           connectionPoolSize: 8
   jpa:
     open-in-view: false
-    show-sql: true
+    show-sql: false
     hibernate:
       ddl-auto: none
 logging:
