Feat: 결제 시 재고 Redis에 저장
- 재고 차감 시 SortedSet 업데이트
- 최초 저장 시 TTL 적용 (4 day)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -49,6 +49,9 @@ logging:
     org.springframework.cache: DEBUG
     org.springframework.data.redis: DEBUG
 
+db:
+  product:
+    popular: DB:POP_PRODUCT
 ---
 spring.config.activate.on-profile: local, test
 
