Feat: 인기상품 조회를 DB에서 Redis로 변경
- 24시간마다 인기상품 캐시에 적재
- 3일간의 상품의 판매 정보를  UnionZSet 통해서 DB:RANKING_PRODUCT:{LocalDate}으로 저장 (TTL : 4day)
- schedlock 을 통해서 redis에 스케줄락 적용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,6 +52,7 @@ logging:
 db:
   product:
     popular: DB:POP_PRODUCT
+    ranking: DB:RANKING_PRODUCT
 ---
 spring.config.activate.on-profile: local, test
 
