Feat: 선착순 쿠폰 발급 기능 구현
- 선착순 쿠폰 발급 시 유저 1명당 1개의 쿠폰 발급하기 때문에, bitmap을 통해서 유저의 발급여부 확인
- redis의 SortedSet 자료구조 이용한 선착순 Queue에서 유저를 가져와서 비동기로 4초마다 쿠폰 발급

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,6 +53,9 @@ db:
   product:
     popular: DB:POP_PRODUCT
     ranking: DB:RANKING_PRODUCT
+  coupon:
+    queue: DB:COUPON:QUEUE
+    issued: DB:COUPON:ISSUED
 ---
 spring.config.activate.on-profile: local, test
 
