--- a/infra/mysql/compose.yml
+++ b/infra/mysql/compose.yml
@@ -9,6 +9,13 @@ services:
       - MYSQL_DATABASE=hhplus
     volumes:
       - ../../data/mysql/:/var/lib/mysql
-networks:
-  default:
-    driver: bridge
+  mysql-exporter:
+    image: prom/mysqld-exporter:latest
+    container_name: mysql-exporter
+    command:
+      - --mysqld.username=root
+      - --mysqld.address=mysql:3306
+    environment:
+      - MYSQLD_EXPORTER_PASSWORD=root
+    depends_on:
+      - mysql
