--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -51,6 +51,15 @@ logging:
     org.springframework.cache: DEBUG
     org.springframework.data.redis: DEBUG
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,metrics,prometheus
+  endpoint:
+    health:
+      show-details: always
+
 db:
   product:
     popular: DB:POP_PRODUCT
