Error : kafka message 역직렬화 문제 해결
- 바로 evntMap을 통해 역직렬화

--- a/infrastructure-kafka/src/main/resources/application-kafka.yml
+++ b/infrastructure-kafka/src/main/resources/application-kafka.yml
@@ -7,9 +7,13 @@ spring:
       retries: 3
     consumer:
       group-id: ecommerce
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      key-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
       auto-offset-reset: earliest
       enable-auto-commit: false
       properties:
-        spring.json.trusted.packages: "kr.hhplus.be.server.*"
+        spring.deserializer.key.delegate.class: org.apache.kafka.common.serialization.StringDeserializer
+        spring.deserializer.value.delegate.class: org.springframework.kafka.support.serializer.JsonDeserializer
+        spring.json.trusted.packages: "*"
+        spring.json.use.type.headers: false
+        spring.json.value.default.type: java.lang.Object
