Refactor: coupon 발급 성능 개선
- 신뢰성을 줄이긴 했으나, 성능 옵션 개선

--- a/infrastructure-kafka/src/main/resources/application-kafka.yml
+++ b/infrastructure-kafka/src/main/resources/application-kafka.yml
@@ -4,7 +4,11 @@ spring:
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-      retries: 3
+      retries: 1
+      acks: 1
+      linger-ms: 5
+      batch-size: 16384
+      buffer-memory: 33554432
     consumer:
       group-id: ecommerce
       key-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
